Changed to rows and cells rather than cells and line breaks. Adjusted sizes and margins. Works up to around 400 before squares become too small to see. Around 500 it stops working.

--- a/css/etch-a-sketch.css
+++ b/css/etch-a-sketch.css
@@ -14,8 +14,8 @@ button {
 }
 
 div.cell {
-	height: 57px;
-	width: 57px;
+	height: 77px;
+	width: 77px;
 	display: inline-block;
 	background-color: #FFF;
 	margin: 1px;
